Add theme and refactor view

--- a/ViewMarkdownBlazor/Pages/MarkdownTemplate/FolderTemplate.razor
+++ b/ViewMarkdownBlazor/Pages/MarkdownTemplate/FolderTemplate.razor
@@ -1,38 +1,34 @@
 ﻿@if (Items != null)
 {
-    <div class="container-fluid">
-        <div class="row">
-            @foreach (var item in Items)
-            {
-                <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-3 col-xl-3">
-                    <div class="card m-2 p-1">
-                        <div class="card-body">
-                            <div class="text-dark">
-                                @item.FolderName
-                                @if (item.MarkdownCount > 0)
-                                {
-                                    <span>&nbsp; (@item.MarkdownCount)</span>
-                                }
-                            </div>
-                        </div>
-                        <div class="card-footer p-1">
+    <MudGrid>
+        @foreach (var item in Items)
+        {
+            <MudItem xs="6" sm="4">
+                <MudCard Outlined="true">
+                    <MudCardContent>
+                        <MudText>
+                            @item.FolderName
                             @if (item.MarkdownCount > 0)
-                            {   
-                                var pathEncode = Convert.ToBase64String(Encoding.UTF8.GetBytes(item.FolderPath));
-                                <div class="text-end">
-                                    <NavLink href="@{$"/ViewFolder?FilePath={pathEncode}"}" class="nav-link">
-                                        <span>
-                                            View
-                                        </span>
-                                    </NavLink>
-                                </div>
+                            {
+                                <span>&nbsp; (@item.MarkdownCount)</span>
                             }
-                        </div>
-                    </div>
-                </div>
-            }
-        </div>
-    </div>
+                        </MudText>
+                    </MudCardContent>
+                    <MudCardActions>
+                        @if (item.MarkdownCount > 0)
+                        {
+                            var pathEncode = Convert.ToBase64String(Encoding.UTF8.GetBytes(item.FolderPath));
+                            var link = $"./ViewFolder?FilePath={pathEncode}";
+                            <MudNavLink Href="@link" Icon="@Icons.Material.Outlined.Inbox">
+                                <span>View</span>
+                            </MudNavLink>
+                        }
+                    </MudCardActions>
+                </MudCard>
+            </MudItem>
+        }
+    </MudGrid>
+
 }
 
 @code {
