--- a/ViewMarkdownBlazor/_Imports.razor
+++ b/ViewMarkdownBlazor/_Imports.razor
@@ -14,3 +14,7 @@
 @using Markdig
 @using System.Text
 @using Microsoft.AspNetCore.WebUtilities
+@using Blazored.LocalStorage
+@using MudBlazor
+@using ViewMarkdownBlazor.Data
+@using ViewMarkdownBlazor.Preferences
