--- a/ViewMarkdownBlazor/Pages/Index.razor
+++ b/ViewMarkdownBlazor/Pages/Index.razor
@@ -5,20 +5,23 @@
 
 <PageTitle>View Markdown Manager</PageTitle>
 
-<h2>View Markdown Manager</h2>
+<MudContainer>
+    <MudText Typo="Typo.h4" Class="mb-5">View Markdown Manager</MudText>
 
-@if (Items.Any())
-{
-    <FolderTemplate Items="Items"></FolderTemplate>
-}
-else
-{
-    <div class="card m-2 p-1">
-        <div class="card-body text-center">
-             <b>Folder Empty</b>
+    @if (Items.Any())
+    {
+      <FolderTemplate Items="Items"></FolderTemplate>
+    }
+    else
+    {
+        <div class="card m-2 p-1">
+            <div class="card-body text-center">
+                <b>Folder Empty</b>
+            </div>
         </div>
-    </div>
-}
+    }
+</MudContainer>
+
 
 
 @code {
