--- a/ViewMarkdownBlazor/Shared/NavMenu.razor
+++ b/ViewMarkdownBlazor/Shared/NavMenu.razor
@@ -1,3 +1,3 @@
 ﻿<MudNavMenu>
-    <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Outlined.Home">Home</MudNavLink>
+    <MudNavLink Href="./" Match="NavLinkMatch.All" Icon="@Icons.Material.Outlined.Home">Home</MudNavLink>
 </MudNavMenu>
