--- a/ViewMarkdownBlazor/Pages/ViewMarkdownDetail.razor
+++ b/ViewMarkdownBlazor/Pages/ViewMarkdownDetail.razor
@@ -1,29 +1,24 @@
 ﻿@page "/ViewMarkdownDetail/{MarkdownFilePath?}"
 @inject NavigationManager NavigationHelper
-
+<HeadContent>
+    <link href="css/site.css" rel="stylesheet" />
+</HeadContent>
 <MudContainer MaxWidth="MaxWidth.Large" Class="mb-5">
     @((MarkupString)MarkdownDocument)
 </MudContainer>
 
 @code {
     [Parameter]
+    [SupplyParameterFromQuery]
     public string MarkdownFilePath { get; set; } = string.Empty;
 
     public string MarkdownDocument { get; set; } = string.Empty;
 
     protected override void OnInitialized()
     {
-        string filePath = string.Empty;
-        var uri = NavigationHelper.ToAbsoluteUri(NavigationHelper.Uri);
-
-        if (QueryHelpers.ParseQuery(uri.Query).TryGetValue("MarkdownFilePath", out var value))
+        if (!string.IsNullOrEmpty(MarkdownFilePath))
         {
-            filePath = value.First();
-        }
-
-        if (!string.IsNullOrEmpty(filePath))
-        {
-            MarkdownFilePath = Encoding.UTF8.GetString(Convert.FromBase64String(filePath));
+            MarkdownFilePath = Encoding.UTF8.GetString(Convert.FromBase64String(MarkdownFilePath));
 
             GetMarkdownItemFileDetail();
         }
